--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-medium-image-zoom": "^5.2.13",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
